<resources>
    <string name="app_name">Manage Your Schedule</string>
    <string name="main">메인</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">temporal user</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="kindOfSchedule">일정 종류</string>
    <string name="studySchedule">업무 일정</string>
    <string name="studyScheduleUpdate">업무 일정 수정</string>
    <string name="otherScheduleUpdate">다른 일정 수정</string>
    <string name="studyScheduleAdd">업무 일정 추가</string>
    <string name="otherScheduleAdd">다른 일정 추가</string>
    <string name="selectYearMonthDay">연도, 월, 일 선택</string>
    <string name="sampleStartTime">09:00</string>
    <string name="sampleEndTime">11:00</string>
    <string name="add">추가</string>
    <string name="work">업무</string>
    <string name="otherSchedule">업무 외 일정</string>
    <string name="personal">개인</string>
    <string name="timer">타이머</string>
    <string name="exerciseSchedule">운동 일정</string>
    <string name="exercise">운동</string>
    <string name="menu_diet">Diet</string>
    <string name="signup">회원가입</string>
    <string name="userName">이름</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="login">로그인</string>
    <string name="or">or</string>
    <string name="dateOfBirth">생년월일(예:19980506)</string>
    <string name="loginWithGoogle">Google로 로그인하기</string>
    <string name="findPassword">비밀번호 찾기</string>
    <string name="confirmPassword">비밀번호 재입력</string>
    <string name="sendRandomCode">입력하신 이메일 주소로 인증코드가 발송됩니다.</string>
    <string name="sendCode">인증코드 보내기</string>
    <string name="title">제목</string>
    <string name="theTitle">제목:</string>
    <string name="place">위치</string>
    <string name="content">내용</string>
    <string name="theContent">내용:</string>
    <string name="picture">사진</string>
    <string name="register">등록</string>
    <string name="year">년 </string>
    <string name="month">월 </string>
    <string name="dayOfMonth">일</string>
    <string name="startTime">시작시간: </string>
    <string name="endTime">종료시간: </string>
    <string name="hour">시- </string>
    <string name="minute">분  </string>
    <string name="addWork">일정 추가</string>
    <string name="fromTo">     ~     </string>
    <string name="satisfaction">만족도 : </string>
    <string name="coment">코멘트</string>
    <string name="schedule">일정</string>
    <string name="settings">환경설정</string>
    <string name="news">뉴스</string>
    <string name="logout">로그아웃</string>
    <string name="viewbydate">날짜 별 일정</string>
    <string name="urlAddress">URL주소</string>
    <string name="lookUpDate">조회하고 싶은 날짜를 선택해 주세요 : </string>
    <string name="selectDate">날짜 선택</string>
    <string name="confirm">확인</string>
    <string name="update">수정</string>
    <string name="delete">삭제</string>
    <string name="exit">종료</string>
    <string name="viewDetails">상세보기</string>
    <string name="resetPassword">비밀번호 재설정</string>
    <string name="notify">현재 시점 기준으로 일정 현황을 알려주는 알림 허용 : </string>
    <string name="notifyStartSchedule">일정 시작을 알려주는 알림 허용 : </string>
    <string name="notifyEndSchedule">일정 종료를 알려주는 알림 허용 : </string>
    <string name="addSchedule">일정 추가</string>
    <string name="scheduleProgressRate">목표 대비 수행률: </string>
    <string name="loginIdSave">아이디 저장</string>
    <string name="showGoogleMap">구글맵 보기</string>
    <string name="search">검색</string>
    <string name="permission_1">설정 -> 권한에서 권한을 허용할 수 있습니다.</string>
    <string name="permission_2">사진 및 파일을 저장하기 위해서 접근 권한이 필요합니다.</string>
    <string name="colorOrange">#ff8800</string>


</resources>
