<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:paddingRight="15dp"
        tools:context=".activities.AddScheduleActivity">


        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonStudy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/studySchedule" />

            <RadioButton
                android:id="@+id/radioButtonOther"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/otherSchedule" />


        </RadioGroup>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/titleOfSchedule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:hint="@string/title"
                android:inputType="textMultiLine"
                android:scrollHorizontally="false" />
        </com.google.android.material.textfield.TextInputLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <Button
                android:id="@+id/dateSelectButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00ff0000" />

            <TextView
                android:id="@+id/textViewDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:text="@string/selectYearMonthDay"
                android:textSize="16sp" />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/startTimeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#00ff0000" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/startTime"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textViewStartTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sampleStartTime"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fromTo"
                        android:textSize="16sp" />
                </LinearLayout>

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/endTimeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#00ff0000" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/endTime"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textViewEndTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sampleEndTime"
                        android:textSize="16sp" />
                </LinearLayout>

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300sp"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/placeOfSchedule"
                    android:layout_width="300sp"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:hint="@string/place"
                    android:inputType="textMultiLine"
                    android:scrollHorizontally="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/findLocation"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:onClick="onClickPlace"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_location" />


        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/contentOfSchedule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:hint="@string/content"
                android:inputType="textMultiLine"
                android:scrollHorizontally="false" />
        </com.google.android.material.textfield.TextInputLayout>


        <ScrollView
            android:id="@+id/ScrollViewAddSchedule"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true"
            android:scrollbars="vertical">

            <ImageView
                android:id="@+id/UploadedImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:adjustViewBounds="true"
                android:scaleType="centerInside" />
        </ScrollView>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/postImageView"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"

                android:src="@drawable/ic_camera" />

            <Button
                android:id="@+id/postDataButton"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_background_blue"

                android:text="@string/register"
                android:textColor="#ffffff" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>