<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignUpActivity"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="15dp">



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signUpUserNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signUpUserName"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:hint="@string/userName"
            android:layout_height="50dp">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signUpUserDateOfBirthLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signUpUserDateOfBirth"
            android:inputType="date"
            android:layout_width="match_parent"
            android:hint="@string/dateOfBirth"
            android:layout_height="50dp">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signUpEmailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signUpEmail"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:hint="@string/email"
            android:layout_height="50dp">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>




    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signUpPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:passwordToggleEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signUpPassword"
            android:layout_width="match_parent"
            android:hint="@string/password"
            android:layout_height="50dp"
            android:inputType="textPassword">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmSignUpPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:passwordToggleEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmSignUpPassword"
            android:layout_width="match_parent"
            android:hint="@string/confirmPassword"
            android:layout_height="50dp"
            android:inputType="textPassword">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/btn_background_blue"
        android:textColor="#ffffff"
        android:text="@string/signup"
        android:layout_marginBottom="10dp"
        />






</LinearLayout>