<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <Button
        android:id="@+id/work_button"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:textStyle="bold"
        android:background="@drawable/btn_background_white"
        android:textColor="@drawable/btn_change"
        android:text="@string/studySchedule"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/personal_work_button"
        app:layout_constraintTop_toTopOf="parent"

        />

    <Button
        android:id="@+id/personal_work_button"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:textStyle="bold"
        android:background="@drawable/btn_background_white"
        android:textColor="@drawable/btn_change"
        android:text="@string/otherSchedule"
        app:layout_constraintLeft_toRightOf="@id/work_button"
        app:layout_constraintRight_toLeftOf="@id/logout_button"
        app:layout_constraintTop_toTopOf="parent"

        />

    <Button
        android:id="@+id/logout_button"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:textStyle="bold"
        android:background="@drawable/btn_background_white"
        android:textColor="@drawable/btn_change"
        android:text="@string/logout"
        app:layout_constraintLeft_toRightOf="@id/personal_work_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <Button
        android:id="@+id/settings_button"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:textStyle="bold"
        android:background="@drawable/btn_background_white"
        android:textColor="@drawable/btn_change"
        android:text="@string/settings"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/exit_button"
        app:layout_constraintTop_toBottomOf="@id/work_button"

        />

    <Button
        android:id="@+id/exit_button"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:textStyle="bold"
        android:background="@drawable/btn_background_white"
        android:textColor="@drawable/btn_change"
        android:text="@string/exit"
        app:layout_constraintLeft_toRightOf="@id/settings_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/work_button"

        />





    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        app:layout_constraintBottom_toTopOf="@+id/floatingActionButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_button"/>



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="20dp"
        app:borderWidth="0dp"
        android:backgroundTint="@color/colorWhite"
        android:clickable="true"
        app:layout_constraintTop_toBottomOf="@+id/datePicker"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/ic_add_black_24dp"
        android:focusable="true" />
</androidx.constraintlayout.widget.ConstraintLayout>