<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".activities.SettingsActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">

        <Switch
            android:id="@+id/switchNotify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notify" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">

        <Switch
            android:id="@+id/switchNotifyStartSchedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notifyStartSchedule" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Switch
            android:id="@+id/switchNotifyEndSchedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notifyEndSchedule" />
    </LinearLayout>

    <Button
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="회원탈퇴"
        android:onClick="onClickWithdrawal">
    </Button>
</LinearLayout>